--- a/404.html
+++ b/404.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Error-404 - stcc.be</title>
-    <meta property="og:title" content="Error-404 - stcc.be" />
+    <title>404 - Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
 
     <style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;  -webkit-font-smoothing: antialiased;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;  color: inherit;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}details {  display: block;  margin: 0;  padding: 0;}summary::-webkit-details-marker {  display: none;}[data-thq="accordion"] [data-thq="accordion-content"] {  max-height: 0;  overflow: hidden;  transition: max-height 0.3s ease-in-out;  padding: 0;}[data-thq="accordion"] details[data-thq="accordion-trigger"][open] + [data-thq="accordion-content"] {  max-height: 1000vh;}details[data-thq="accordion-trigger"][open] summary [data-thq="accordion-icon"] {  transform: rotate(180deg);}html { scroll-behavior: smooth  }
+      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
     </style>
     <style data-tag="default-style-sheet">
       html {
@@ -24,19 +23,13 @@
         letter-spacing: normal;
         line-height: 1.15;
         color: var(--dl-color-gray-black);
-        background: var(--dl-color-gray-white);
+        background-color: var(--dl-color-gray-white);
 
-        fill: var(--dl-color-gray-black);
       }
     </style>
     <link
       rel="stylesheet"
       href="https://unpkg.com/animate.css@4.1.1/animate.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&amp;display=swap"
-      data-tag="font"
     />
     <link
       rel="stylesheet"
@@ -62,236 +55,16 @@
     <div>
       <link href="./404.css" rel="stylesheet" />
 
-      <div class="error404-container1">
-        <navbar-wrapper class="navbar-wrapper" rootclassname="navbarundefined">
-          <!--Navbar component-->
-          <div class="navbar-container navbarroot-class-name2">
-            <header data-thq="thq-navbar" class="navbar-navbar-interactive">
-              <img
-                id="navbar-logo"
-                alt="logo"
-                src="public/images/stcc.svg"
-                class="navbar-image1"
-              />
-              <div data-thq="thq-navbar-nav" class="navbar-desktop-menu">
-                <nav class="navbar-links1">
-                  <span class="navbar-text10">Services</span>
-                  <span class="navbar-text11">Sales</span>
-                  <span class="navbar-text12">About</span>
-                </nav>
-                <div class="navbar-buttons1">
-                  <div
-                    data-thq="thq-dropdown"
-                    class="navbar-thq-dropdown list-item"
-                  >
-                    <div
-                      data-thq="thq-dropdown-toggle"
-                      class="navbar-dropdown-toggle1"
-                    >
-                      <span class="navbar-text13">
-                        <span>NL</span>
-                        <br />
-                      </span>
-                      <div
-                        data-thq="thq-dropdown-arrow"
-                        class="navbar-dropdown-arrow"
-                      >
-                        <svg viewBox="0 0 1024 1024" class="navbar-icon10">
-                          <path d="M426 726v-428l214 214z"></path>
-                        </svg>
-                      </div>
-                    </div>
-                    <ul
-                      data-thq="thq-dropdown-list"
-                      class="navbar-dropdown-list"
-                    >
-                      <li
-                        data-thq="thq-dropdown"
-                        class="navbar-dutch list-item"
-                      >
-                        <div
-                          data-thq="thq-dropdown-toggle"
-                          class="navbar-dropdown-toggle2"
-                        >
-                          <img
-                            alt="image"
-                            src="public/icons/nl_flag.svg"
-                            class="navbar-image2"
-                          />
-                          <span class="navbar-nederlands">Nederlands</span>
-                        </div>
-                      </li>
-                      <li
-                        data-thq="thq-dropdown"
-                        class="navbar-french list-item"
-                      >
-                        <div
-                          data-thq="thq-dropdown-toggle"
-                          class="navbar-dropdown-toggle3"
-                        >
-                          <img
-                            alt="image"
-                            src="public/icons/fr_flag.svg"
-                            class="navbar-image3"
-                          />
-                          <span class="navbar-text16">Français</span>
-                        </div>
-                      </li>
-                      <li
-                        data-thq="thq-dropdown"
-                        class="navbar-english list-item"
-                      >
-                        <div
-                          data-thq="thq-dropdown-toggle"
-                          class="navbar-dropdown-toggle4"
-                        >
-                          <img
-                            alt="image"
-                            src="public/icons/uk_flag.svg"
-                            class="navbar-image4"
-                          />
-                          <span class="navbar-text17">English</span>
-                        </div>
-                      </li>
-                      <li
-                        data-thq="thq-dropdown"
-                        class="navbar-german list-item"
-                      >
-                        <div
-                          data-thq="thq-dropdown-toggle"
-                          class="navbar-dropdown-toggle5"
-                        >
-                          <img
-                            alt="image"
-                            src="public/icons/ge_flag.svg"
-                            class="navbar-image5"
-                          />
-                          <span class="navbar-text18">Deutsch</span>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                  <button id="navbar-Contact" class="navbar-register1 button">
-                    <span>
-                      <span class="navbar-text20">Contact</span>
-                      <br />
-                    </span>
-                  </button>
-                </div>
-              </div>
-              <div data-thq="thq-burger-menu" class="navbar-burger-menu">
-                <svg viewBox="0 0 1024 1024" class="navbar-icon12">
-                  <path
-                    d="M128 554.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 298.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 810.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667z"
-                  ></path>
-                </svg>
-              </div>
-              <div data-thq="thq-mobile-menu" class="navbar-mobile-menu">
-                <div class="navbar-nav">
-                  <div class="navbar-top">
-                    <img
-                      alt="image"
-                      src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
-                      class="navbar-logo"
-                    />
-                    <div data-thq="thq-close-menu" class="navbar-close-menu">
-                      <svg viewBox="0 0 1024 1024" class="navbar-icon14">
-                        <path
-                          d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
-                        ></path>
-                      </svg>
-                    </div>
-                  </div>
-                  <nav class="navbar-links2">
-                    <span class="navbar-text22">About</span>
-                    <span class="navbar-text23">Features</span>
-                    <span class="navbar-text24">Pricing</span>
-                    <span class="navbar-text25">Team</span>
-                    <span class="navbar-text26">Blog</span>
-                  </nav>
-                  <div class="navbar-buttons2">
-                    <button class="navbar-login button">Login</button>
-                    <button class="button">Register</button>
-                  </div>
-                </div>
-                <div>
-                  <svg
-                    viewBox="0 0 950.8571428571428 1024"
-                    class="navbar-icon16"
-                  >
-                    <path
-                      d="M925.714 233.143c-25.143 36.571-56.571 69.143-92.571 95.429 0.571 8 0.571 16 0.571 24 0 244-185.714 525.143-525.143 525.143-104.571 0-201.714-30.286-283.429-82.857 14.857 1.714 29.143 2.286 44.571 2.286 86.286 0 165.714-29.143 229.143-78.857-81.143-1.714-149.143-54.857-172.571-128 11.429 1.714 22.857 2.857 34.857 2.857 16.571 0 33.143-2.286 48.571-6.286-84.571-17.143-148-91.429-148-181.143v-2.286c24.571 13.714 53.143 22.286 83.429 23.429-49.714-33.143-82.286-89.714-82.286-153.714 0-34.286 9.143-65.714 25.143-93.143 90.857 112 227.429 185.143 380.571 193.143-2.857-13.714-4.571-28-4.571-42.286 0-101.714 82.286-184.571 184.571-184.571 53.143 0 101.143 22.286 134.857 58.286 41.714-8 81.714-23.429 117.143-44.571-13.714 42.857-42.857 78.857-81.143 101.714 37.143-4 73.143-14.286 106.286-28.571z"
-                    ></path></svg
-                  ><svg
-                    viewBox="0 0 877.7142857142857 1024"
-                    class="navbar-icon18"
-                  >
-                    <path
-                      d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
-                    ></path></svg
-                  ><svg
-                    viewBox="0 0 602.2582857142856 1024"
-                    class="navbar-icon20"
-                  >
-                    <path
-                      d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-            </header>
-          </div>
-        </navbar-wrapper>
-        <div class="error404-container2">
-          <span class="error404-text">error 404</span>
+      <div class="not-found-container">
+        <h3>OOPS! PAGE NOT FOUND</h3>
+        <div class="not-found-container1">
+          <h1 class="not-found-text1">404</h1>
         </div>
-        <footer-wrapper class="footer-wrapper" rootclassname="footerundefined">
-          <!--Footer component-->
-          <footer
-            class="footer-footer7 thq-section-padding footerroot-class-name2"
-          >
-            <div class="footer-max-width thq-section-max-width">
-              <div class="thq-divider-horizontal"></div>
-              <div class="footer-row">
-                <div class="footer-container">
-                  <span class="footer-text thq-body-small">
-                    © 2024 Sint-Truiden Classic Cars
-                  </span>
-                </div>
-                <div class="footer-footer-links">
-                  <div class="footer-social-links">
-                    <svg
-                      viewBox="0 0 877.7142857142857 1024"
-                      class="thq-icon-small"
-                    >
-                      <path
-                        d="M713.143 73.143c90.857 0 164.571 73.714 164.571 164.571v548.571c0 90.857-73.714 164.571-164.571 164.571h-107.429v-340h113.714l17.143-132.571h-130.857v-84.571c0-38.286 10.286-64 65.714-64l69.714-0.571v-118.286c-12-1.714-53.714-5.143-101.714-5.143-101.143 0-170.857 61.714-170.857 174.857v97.714h-114.286v132.571h114.286v340h-304c-90.857 0-164.571-73.714-164.571-164.571v-548.571c0-90.857 73.714-164.571 164.571-164.571h548.571z"
-                      ></path></svg
-                    ><svg
-                      viewBox="0 0 877.7142857142857 1024"
-                      class="thq-icon-small"
-                    >
-                      <path
-                        d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
-                      ></path></svg
-                    ><svg
-                      viewBox="0 0 877.7142857142857 1024"
-                      class="thq-icon-small"
-                    >
-                      <path
-                        d="M135.429 808h132v-396.571h-132v396.571zM276 289.143c-0.571-38.857-28.571-68.571-73.714-68.571s-74.857 29.714-74.857 68.571c0 37.714 28.571 68.571 73.143 68.571h0.571c46.286 0 74.857-30.857 74.857-68.571zM610.286 808h132v-227.429c0-121.714-65.143-178.286-152-178.286-70.857 0-102.286 39.429-119.429 66.857h1.143v-57.714h-132s1.714 37.143 0 396.571v0h132v-221.714c0-11.429 0.571-23.429 4-32 9.714-23.429 31.429-48 68-48 47.429 0 66.286 36 66.286 89.714v212zM877.714 237.714v548.571c0 90.857-73.714 164.571-164.571 164.571h-548.571c-90.857 0-164.571-73.714-164.571-164.571v-548.571c0-90.857 73.714-164.571 164.571-164.571h548.571c90.857 0 164.571 73.714 164.571 164.571z"
-                      ></path></svg
-                    ><svg viewBox="0 0 1024 1024" class="thq-icon-small">
-                      <path
-                        d="M406.286 644.571l276.571-142.857-276.571-144.571v287.429zM512 152c215.429 0 358.286 10.286 358.286 10.286 20 2.286 64 2.286 102.857 43.429 0 0 31.429 30.857 40.571 101.714 10.857 82.857 10.286 165.714 10.286 165.714v77.714s0.571 82.857-10.286 165.714c-9.143 70.286-40.571 101.714-40.571 101.714-38.857 40.571-82.857 40.571-102.857 42.857 0 0-142.857 10.857-358.286 10.857v0c-266.286-2.286-348-10.286-348-10.286-22.857-4-74.286-2.857-113.143-43.429 0 0-31.429-31.429-40.571-101.714-10.857-82.857-10.286-165.714-10.286-165.714v-77.714s-0.571-82.857 10.286-165.714c9.143-70.857 40.571-101.714 40.571-101.714 38.857-41.143 82.857-41.143 102.857-43.429 0 0 142.857-10.286 358.286-10.286v0z"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </footer>
-        </footer-wrapper>
+        <div class="not-found-container2">
+          <h2 class="not-found-text2">
+            WE ARE SORRY, BUT THE PAGE YOU REQUESTED WAS NOT FOUND
+          </h2>
+        </div>
       </div>
     </div>
     <script
