Remove TODO comments from index.html
Removed TODO comments for document title and og:title.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
     <title>STCC</title>
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
     <meta name="description" content="Sint-Truiden Classic Cars" />
     <meta name="author" content="Christophe Heylands" />
 
-    <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="STCC" />
     <meta property="og:description" content="Sint-Truiden Classic Cars" />
     <meta property="og:type" content="website" />
